--- a/style.css
+++ b/style.css
@@ -38,7 +38,18 @@ p {
   color: hsl(220, 15%, 55%);
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (min-width: 320px) {
+  .qr-code-card {
+    background-color: #fff;
+    margin: 110px auto;
+    width: 17em;
+    padding: 16px;
+    border-radius: 18px;
+    box-shadow: 2px 2px 20px #a0adbc;
+  }
+}
+
+@media only screen and (max-width: 320px) {
   .qr-code-card {
     background-color: #fff;
     margin: 110px auto;
@@ -49,6 +60,7 @@ p {
   }
 }
 
+/*
 @media only screen and (max-width: 935px) and (min-width: 501px) {
   .qr-code-card {
     background-color: #fff;
@@ -59,7 +71,8 @@ p {
     box-shadow: 2px 2px 20px #a0adbc;
   }
 }
-
+*/
+/*
 @media only screen and (max-width: 1215px) and (min-width: 936px) {
   .qr-code-card {
     background-color: #fff;
@@ -70,3 +83,4 @@ p {
     box-shadow: 2px 2px 20px #a0adbc;
   }
 }
+*/
